--- a/css/build.css
+++ b/css/build.css
@@ -2,6 +2,12 @@
   display: block!important;
 }
 
+.mode-interact .view-is-empty {
+  border: 5px solid #D4D4D4!important;
+  color: #6A6868!important;
+  font-size: 12px!important;
+}
+
 .mode-interact [data-name="Conditional container"] {
   margin: 30px 0;
   width: 100%;
