--- a/css/index.scss
+++ b/css/index.scss
@@ -1,5 +1,7 @@
 [data-widget-package="com.fliplet.conditional-container"] {
-  background: red!important;
+  width: 100%;
+  background: blue;
+  padding: 15px;
 }
 
 // /* UPDATE PACKAGE NAME AND VARIABLE PREFIX USING THE SAME VALUES AS "widget.json" */
