fix(DEV-407): scss fix to properly apply hidden class

--- a/css/index.scss
+++ b/css/index.scss
@@ -202,23 +202,29 @@ $variablePrefix: "conditional-container";
     }
 
     @else {
-      @if map-get($configuration, conditional-container-containerContentLayout)=="on" {
-        @if map-get($configuration, conditional-container-containerDisplay)=="block" {
-          display: flex !important;
+      &:not(.hidden) {
+        @if map-get($configuration, conditional-container-containerContentLayout)=="on" {
+          @if map-get($configuration, conditional-container-containerDisplay)=="block" {
+            display: flex !important;
+          }
+
+          @else {
+            display: inline-flex !important;
+          }
+
+          flex-direction: map-get($configuration, conditional-container-containerFlexDirection);
+          align-items: map-get($configuration, conditional-container-);
+          justify-content: map-get($configuration, conditional-container-containerFlexJustify);
+          flex-wrap: map-get($configuration, conditional-container-);
         }
 
         @else {
-          display: inline-flex !important;
+          display: map-get($configuration, conditional-container-containerDisplay) !important;
         }
-
-        flex-direction: map-get($configuration, conditional-container-containerFlexDirection);
-        align-items: map-get($configuration, conditional-container-);
-        justify-content: map-get($configuration, conditional-container-containerFlexJustify);
-        flex-wrap: map-get($configuration, conditional-container-);
       }
-
-      @else {
-        display: map-get($configuration, conditional-container-containerDisplay) !important;
+      
+      &.hidden {
+        display: none !important;
       }
     }
 
@@ -285,23 +291,25 @@ $variablePrefix: "conditional-container";
       }
 
       @else {
-        @if map-get($configuration, conditional-container-containerContentLayoutTablet)=="on" {
-          @if map-get($configuration, conditional-container-containerDisplayTablet)=="block" {
-            display: flex !important;
+        &:not(.hidden) {
+          @if map-get($configuration, conditional-container-containerContentLayoutTablet)=="on" {
+            @if map-get($configuration, conditional-container-containerDisplayTablet)=="block" {
+              display: flex !important;
+            }
+
+            @else {
+              display: inline-flex !important;
+            }
+
+            flex-direction: map-get($configuration, conditional-container-containerFlexDirectionTablet);
+            align-items: map-get($configuration, conditional-container-containerFlexAlignTablet);
+            justify-content: map-get($configuration, conditional-container-containerFlexJustifyTablet);
+            flex-wrap: map-get($configuration, conditional-container-containerFlexWrapTablet);
           }
 
           @else {
-            display: inline-flex !important;
+            display: map-get($configuration, conditional-container-containerDisplayTablet) !important;
           }
-
-          flex-direction: map-get($configuration, conditional-container-containerFlexDirectionTablet);
-          align-items: map-get($configuration, conditional-container-containerFlexAlignTablet);
-          justify-content: map-get($configuration, conditional-container-containerFlexJustifyTablet);
-          flex-wrap: map-get($configuration, conditional-container-containerFlexWrapTablet);
-        }
-
-        @else {
-          display: map-get($configuration, conditional-container-containerDisplayTablet) !important;
         }
       }
 
@@ -369,23 +377,25 @@ $variablePrefix: "conditional-container";
       }
 
       @else {
-        @if map-get($configuration, conditional-container-containerContentLayoutDesktop)=="on" {
-          @if map-get($configuration, conditional-container-containerDisplayDesktop)=="block" {
-            display: flex !important;
+        &:not(.hidden) {
+          @if map-get($configuration, conditional-container-containerContentLayoutDesktop)=="on" {
+            @if map-get($configuration, conditional-container-containerDisplayDesktop)=="block" {
+              display: flex !important;
+            }
+
+            @else {
+              display: inline-flex !important;
+            }
+
+            flex-direction: map-get($configuration, conditional-container-containerFlexDirectionDesktop);
+            align-items: map-get($configuration, conditional-container-containerFlexAlignDesktop);
+            justify-content: map-get($configuration, conditional-container-containerFlexJustifyDesktop);
+            flex-wrap: map-get($configuration, conditional-container-containerFlexWrapDesktop);
           }
 
           @else {
-            display: inline-flex !important;
+            display: map-get($configuration, conditional-container-containerDisplayDesktop) !important;
           }
-
-          flex-direction: map-get($configuration, conditional-container-containerFlexDirectionDesktop);
-          align-items: map-get($configuration, conditional-container-containerFlexAlignDesktop);
-          justify-content: map-get($configuration, conditional-container-containerFlexJustifyDesktop);
-          flex-wrap: map-get($configuration, conditional-container-containerFlexWrapDesktop);
-        }
-
-        @else {
-          display: map-get($configuration, conditional-container-containerDisplayDesktop) !important;
         }
       }
 
